// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/SaveButton should match snapshot, extraClasses 1`] = `
<button
  className="btn btn-primary  some-class"
  data-testid="saveSetting"
  disabled={false}
  id="saveSetting"
  type="submit"
>
  <Memo(LoadingWrapper)
    loading={false}
    text={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Saving"
        id="save_button.saving"
      />
    }
  >
    <MemoizedFormattedMessage
      defaultMessage="Save"
      id="save_button.save"
    />
  </Memo(LoadingWrapper)>
</button>
`;

exports[`components/SaveButton should match snapshot, on defaultMessage 1`] = `
<button
  className="btn btn-primary"
  data-testid="saveSetting"
  disabled={false}
  id="saveSetting"
  type="submit"
>
  <Memo(LoadingWrapper)
    loading={false}
    text={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Saving"
        id="save_button.saving"
      />
    }
  >
    <MemoizedFormattedMessage
      defaultMessage="Save"
      id="save_button.save"
    />
  </Memo(LoadingWrapper)>
</button>
`;

exports[`components/SaveButton should match snapshot, on defaultMessage 2`] = `
<button
  className="btn btn-primary"
  data-testid="saveSetting"
  disabled={false}
  id="saveSetting"
  type="submit"
>
  <Memo(LoadingWrapper)
    loading={false}
    text={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Saving"
        id="save_button.saving"
      />
    }
  >
    Go
  </Memo(LoadingWrapper)>
</button>
`;

exports[`components/SaveButton should match snapshot, on savingMessage 1`] = `
<button
  className="btn btn-primary"
  data-testid="saveSetting"
  disabled={true}
  id="saveSetting"
  type="submit"
>
  <Memo(LoadingWrapper)
    loading={true}
    text={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Saving"
        id="save_button.saving"
      />
    }
  >
    <MemoizedFormattedMessage
      defaultMessage="Save"
      id="save_button.save"
    />
  </Memo(LoadingWrapper)>
</button>
`;

exports[`components/SaveButton should match snapshot, on savingMessage 2`] = `
<button
  className="btn btn-primary"
  data-testid="saveSetting"
  disabled={true}
  id="saveSetting"
  type="submit"
>
  <Memo(LoadingWrapper)
    loading={true}
    text="Saving Config..."
  >
    <MemoizedFormattedMessage
      defaultMessage="Save"
      id="save_button.save"
    />
  </Memo(LoadingWrapper)>
</button>
`;
